# err-per-field

./: Cargo.toml  README.md
.github/workflows/: ci.yml
err-per-field-derive/: Cargo.toml
err-per-field-derive/src/: lib.rs
src/: lib.rs
tests/: generic_struct_test.rs  simple_struct_test.rs
