[package]
name = "err-per-field-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derived macro for err-per-field crate."
homepage = "https://github.com/Evian-Zhang/err-per-field"
documentation = "https://docs.rs/err-per-field-derive"
repository = "https://github.com/Evian-Zhang/err-per-field"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
